apps/slskd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slskd
  labels:
    app.kubernetes.io/name: slskd
