apps/slskd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slskd-httproute
  namespace: slskd
  labels:
    app.kubernetes.io/name: slskd
spec:
  hostnames:
  - "slskd.${DOMAIN}"
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: slskd
      port: 8000
